@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libgcrypt
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgcrypt/ChangeLog,v 1.79 2006/10/19 15:53:59 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgcrypt/ChangeLog,v 1.80 2006/10/29 20:20:28 alonbl Exp $
+
+*libgcrypt-1.2.3 (29 Oct 2006)
+
+  29 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> +libgcrypt-1.2.3.ebuild:
+  Version bump
 
   19 Oct 2006; Roy Marples <uberlord@gentoo.org> libgcrypt-1.2.2-r1.ebuild:
   Added ~sparc-fbsd keyword.
